--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
+
+body,
+button,
+input {
+    font-family: "Poppins", sans-serif;
+}
+
 .App {
-  text-align: center;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#app__header {
+    margin-top: 2em;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#app__content__container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#app__content--left,
+#app__content--right {
+    padding: 2em 3em;
 }
 
-.App-link {
-  color: #61dafb;
+#app__content__btns {
+    display: flex;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#app__content__btns button:first-of-type {
+    margin-right: 20px;
+}
+
+@media all and (max-width: 1035px) {
+    #app__header {
+        margin-top: 0.7em;
+    }
 }
